# gnostr

./: .gitignore  .opencode_spec.md`  COPYING  README.md  __init__.py  build.sh  gnostr-arm64.flatpak  gnostr-x86_64.flatpak  install_app.sh  install_deps.sh  install_websocket.sh  me.velocitynet.Gnostr.json  me.velocitynet.gnostr.json  meson.build  tech.livingonlinux.gnostr.json
.gitea/workflows/: ci.yaml
data/: me.velocitynet.Gnostr.desktop  me.velocitynet.Gnostr.gschema.xml  me.velocitynet.Gnostr.metainfo.xml  me.velocitynet.gnostr.desktop  me.velocitynet.gnostr.desktop.in  me.velocitynet.gnostr.gschema.xml  me.velocitynet.gnostr.metainfo.xml.in  me.velocitynet.gnostr.service.in  meson.build  tech.livingonlinux.gnostr.desktop  tech.livingonlinux.gnostr.gschema.xml  tech.livingonlinux.gnostr.metainfo.xml
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: __init__.py  appindicat.rc  client.py  connection_status.py  database.py  dialogs.py  gnostr  gnostr.gresource.xml  gnostr.in  key_manager.py  main.py  meson.build  nostr_utils.py  renderer.py  window.py  window.ui
src/gateway/: gateway.py  meson.build
src/service/: __init__.py  feed_service.py  meson.build  profile_metadata_service.py  profile_service.py
src/util/: cache_manager.py  connection_state.py  meson.build
tests/: README.md  conftest.py  test_gateway.py  test_profile_metadata_service.py  test_profile_service.py  test_resource_management.py
